--- a/Closure.html
+++ b/Closure.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="main.js"></script>
-    
+    <script src="Closure.js"></script>
 </body>
 </html>
